--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
     "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.3",
+    "react-resize-detector": "^6.7.6",
     "react-scripts": "4.0.3",
+    "reactjs-popup": "^2.0.5",
     "typescript": "^4.4.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "xterm": "^4.14.1",
+    "xterm-addon-fit": "^0.5.0",
+    "xterm-for-react": "^1.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
